--- a/ejercicios/e7_modelo_cajas.html
+++ b/ejercicios/e7_modelo_cajas.html
@@ -1,48 +1,80 @@
 <!doctype HTML>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Ejercicio 7</title>
-    </head>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Ejercicio 7</title>
+		<style>
+			body {
+				background-color: #33CCCC;
+			}
+			header {
+				color: #FF7400;
+			}
 
-    <body>
-        <header>            
-            <h1> Lenguaje de Programación</h1>
-        </header>
-        <!-- Sección de Contenido -->
-        <section>
-            <p>
-                Un lenguaje de programación es un lenguaje formal diseñado para expresar procesos 
-                que pueden ser llevados a cabo por máquinas como las computadoras.
-                Pueden usarse para crear programas que controlen el comportamiento físico y lógico 
-                de una máquina, para expresar algoritmos con precisión, o como modo de comunicación humana
-                Está formado por un conjunto de símbolos y reglas sintácticas y semánticas 
-                que definen su estructura y el significado de sus elementos y expresiones.
-                Al proceso por el cual se escribe, se prueba, se depura, se compila (de ser necesario) 
-                y se mantiene el código fuente de un programa informático se le llama programación.
-            </p>
-            <p>
-                Existe un error común que trata por sinónimos los términos 'lenguaje de programación' 
-                y 'lenguaje informático'. Los lenguajes informáticos engloban a los lenguajes de programación
-                y a otros más, como por ejemplo HTML (lenguaje para el marcado de páginas web 
-                que no es propiamente un lenguaje de programación, sino un conjunto de instrucciones 
-                que permiten diseñar el contenido de los documentos).
-            </p>
-            <p>
-                Para que la computadora entienda nuestras instrucciones debe usarse un lenguaje específico 
-                conocido como código máquina, el cual la máquina comprende fácilmente, pero que lo hace 
-                excesivamente complicado para las personas. De hecho sólo consiste en cadenas extensas de números 0 y 1.
-                Para facilitar el trabajo, los primeros operadores de computadoras decidieron hacer un traductor 
-                para reemplazar los 0 y 1 por palabras o abstracción de palabras y letras provenientes del inglés; 
-                éste se conoce como lenguaje ensamblador. El ensamblador sigue la misma estructura del lenguaje máquina, 
-                pero las letras y palabras son más fáciles de recordar y entender que los números.
-            </p>
-        </section>
-        
-        <footer>
-            <p>
-                [pie de pagina] fuente: <a href="http://es.wikipedia.org/wiki/Lenguaje_de_programaci%C3%B3n"> Wikipedia: Lenguaje Programación </a>
-            </p>
-        </footer>
-    </body>
+			div {
+				background: url("../imagenes/fondo_granulado.jpg");
+				margin: 30px;
+				padding: 20px;
+			}
+
+			.principal {
+				color: #39E639;
+				background-color: #FF7373;
+				width: 600px;
+				padding: 40px;
+				margin-left: 50px;
+				margin-bottom: 20px;
+			}
+
+		
+
+			#pie {
+				color: #FFFD00;
+				background-color: #3714B0;
+			}
+		</style>
+	</head>
+
+	<body>
+		<div>
+			<header>
+				<h1> Lenguaje de Programación</h1>
+			</header>
+			<!-- Sección de Contenido -->
+			<section>
+				<p class="principal">
+					Un lenguaje de programación es un lenguaje formal diseñado para expresar procesos
+					que pueden ser llevados a cabo por máquinas como las computadoras.
+					Pueden usarse para crear programas que controlen el comportamiento físico y lógico
+					de una máquina, para expresar algoritmos con precisión, o como modo de comunicación humana
+					Está formado por un conjunto de símbolos y reglas sintácticas y semánticas
+					que definen su estructura y el significado de sus elementos y expresiones.
+					Al proceso por el cual se escribe, se prueba, se depura, se compila (de ser necesario)
+					y se mantiene el código fuente de un programa informático se le llama programación.
+				</p>
+				<p class="principal">
+					Existe un error común que trata por sinónimos los términos 'lenguaje de programación'
+					y 'lenguaje informático'. Los lenguajes informáticos engloban a los lenguajes de programación
+					y a otros más, como por ejemplo HTML (lenguaje para el marcado de páginas web
+					que no es propiamente un lenguaje de programación, sino un conjunto de instrucciones
+					que permiten diseñar el contenido de los documentos).
+				</p>
+				<p class="principal">
+					Para que la computadora entienda nuestras instrucciones debe usarse un lenguaje específico
+					conocido como código máquina, el cual la máquina comprende fácilmente, pero que lo hace
+					excesivamente complicado para las personas. De hecho sólo consiste en cadenas extensas de números 0 y 1.
+					Para facilitar el trabajo, los primeros operadores de computadoras decidieron hacer un traductor
+					para reemplazar los 0 y 1 por palabras o abstracción de palabras y letras provenientes del inglés;
+					éste se conoce como lenguaje ensamblador. El ensamblador sigue la misma estructura del lenguaje máquina,
+					pero las letras y palabras son más fáciles de recordar y entender que los números.
+				</p>
+			</section>
+
+			<footer>
+				<p id="pie">
+					[pie de pagina] fuente: <a href="http://es.wikipedia.org/wiki/Lenguaje_de_programaci%C3%B3n"> Wikipedia: Lenguaje Programación </a>
+				</p>
+			</footer>
+		</div>
+	</body>
 </html>
